refactor: simplify conditional checks and collections manipulation
- Updated `SliderWithoutPopup` to use `Stream.of` for KeyCode checks.
- Refactored `Document` to replace index-based access with `getFirst`.
- Modified `Edition` and `SkillTableElement` to use `Stream.of` for counting and cursor checks.
- Replaced explicit loops with streams in various methods for concise and readable code.
- Updated collection manipulations to use `getFirst` and `addFirst` for clarity.
- Improved string building using `Collectors.joining` in `GradeCopyGradeScaleDialog` and `GradeExportRenderer`.